@@ -20,6 +20,7 @@ import com.squareup.picasso.Picasso;
 
 import java.util.ArrayList;
 import java.util.List;
+import java.util.Objects;
 
 import appcorp.mmb.R;
 import appcorp.mmb.activities.user.Favorites;
@@ -36,49 +37,18 @@ public class FavoritesHairstyleFeedListAdapter extends RecyclerView.Adapter<Favo
 
     private List<HairstyleDTO> hairstyleData;
     private Context context;
-    private List<Long> likesId = new ArrayList<>();
-    Display display;
-    int width, height;
-    boolean loaded = false;
+    private boolean loaded = false;
 
     public FavoritesHairstyleFeedListAdapter(List<HairstyleDTO> hairstyleData, Context context) {
         this.hairstyleData = hairstyleData;
         this.context = context;
 
         Storage.init(context);
-        initLocalization(Intermediates.convertToString(context, R.string.translation));
-        initScreen();
         initFirebase();
-
-        display = ((WindowManager) context.getSystemService(Context.WINDOW_SERVICE)).getDefaultDisplay();
-        width = display.getWidth();
-        height = width;
-    }
-
-    private void initScreen() {
-        Display display;
-        int width, height;
-        display = ((WindowManager) context
-                .getSystemService(Context.WINDOW_SERVICE))
-                .getDefaultDisplay();
-        width = display.getWidth();
-        height = (int) (width * 0.75F);
-        Storage.addInt("Width", width);
-        Storage.addInt("Height", height);
     }
 
     private void initFirebase() {
         FireAnal.setContext(context);
-    }
-
-    private void initLocalization(final String translation) {
-        if (translation.equals("English")) {
-            Storage.addString("Localization", "English");
-        }
-
-        if (translation.equals("Russian")) {
-            Storage.addString("Localization", "Russian");
-        }
     }
 
     @Override
@@ -107,7 +77,7 @@ public class FavoritesHairstyleFeedListAdapter extends RecyclerView.Adapter<Favo
 
             holder.title.setText(item.getAuthorName());
             holder.availableDate.setText(date[1] + date[2] + "-" + date[3] + date[4] + "-" + date[5] + date[6] + " " + date[7] + date[8] + ":" + date[9] + date[10]);
-            holder.likesCount.setText("" + item.getLikes());
+            holder.likesCount.setText(String.valueOf(item.getLikes()));
 
             holder.likesCount.setText("");
             holder.addLike.setBackgroundResource(R.mipmap.ic_heart);
@@ -161,7 +131,7 @@ public class FavoritesHairstyleFeedListAdapter extends RecyclerView.Adapter<Favo
                 screenShot.setMinimumHeight(Storage.getInt("Height", 854));
                 screenShot.setPadding(0, 0, 1, 0);
                 screenShot.setBackgroundColor(Color.argb(255, 200, 200, 200));
-                Picasso.with(context).load("http://195.88.209.17/storage/images/" + item.getImages().get(i)).resize(width, height).onlyScaleDown().into(screenShot);
+                Picasso.with(context).load("http://195.88.209.17/storage/images/" + item.getImages().get(i)).resize(Storage.getInt("Width", 480), Storage.getInt("Width", 480)).onlyScaleDown().into(screenShot);
 
                 screenShot.setScaleType(ImageView.ScaleType.CENTER_CROP);
                 final int finalI = i;
@@ -206,38 +176,59 @@ public class FavoritesHairstyleFeedListAdapter extends RecyclerView.Adapter<Favo
                         moreContainer.setOrientation(LinearLayout.VERTICAL);
                         moreContainer.setPadding(32, 32, 32, 0);
 
-                        if (item.getHlenght().equals("short"))
-                            moreContainer.addView(createText(Intermediates.convertToString(context, R.string.shortHairstyle), Typeface.DEFAULT_BOLD, 16, "Length", "1"));
-                        else if (item.getHlenght().equals("medium"))
-                            moreContainer.addView(createText(Intermediates.convertToString(context, R.string.mediumHairstyle), Typeface.DEFAULT_BOLD, 16, "Length", "2"));
-                        else if (item.getHlenght().equals("long"))
-                            moreContainer.addView(createText(Intermediates.convertToString(context, R.string.longHairstyle), Typeface.DEFAULT_BOLD, 16, "Length", "3"));
+                        switch (item.getHlenght()) {
+                            case "short":
+                                moreContainer.addView(createText(Intermediates.convertToString(context, R.string.shortHairstyle),  16, "Length", "1"));
+                                break;
+                            case "medium":
+                                moreContainer.addView(createText(Intermediates.convertToString(context, R.string.mediumHairstyle),  16, "Length", "2"));
+                                break;
+                            case "long":
+                                moreContainer.addView(createText(Intermediates.convertToString(context, R.string.longHairstyle),  16, "Length", "3"));
+                                break;
+                        }
 
-                        if (item.getHtype().equals("straight"))
-                            moreContainer.addView(createText(Intermediates.convertToString(context, R.string.straightHairstyleType), Typeface.DEFAULT_BOLD, 16, "Type", "1"));
-                        else if (item.getHtype().equals("braid"))
-                            moreContainer.addView(createText(Intermediates.convertToString(context, R.string.braidHairstyleType), Typeface.DEFAULT_BOLD, 16, "Type", "2"));
-                        else if (item.getHtype().equals("tail"))
-                            moreContainer.addView(createText(Intermediates.convertToString(context, R.string.tailHairstyleType), Typeface.DEFAULT_BOLD, 16, "Type", "3"));
-                        else if (item.getHtype().equals("bunch"))
-                            moreContainer.addView(createText(Intermediates.convertToString(context, R.string.bunchHairstyleType), Typeface.DEFAULT_BOLD, 16, "Type", "4"));
-                        else if (item.getHtype().equals("netting"))
-                            moreContainer.addView(createText(Intermediates.convertToString(context, R.string.nettingHairstyleType), Typeface.DEFAULT_BOLD, 16, "Type", "5"));
-                        else if (item.getHtype().equals("curls"))
-                            moreContainer.addView(createText(Intermediates.convertToString(context, R.string.curlsHairstyleType), Typeface.DEFAULT_BOLD, 16, "Type", "6"));
-                        else if (item.getHtype().equals("unstandart"))
-                            moreContainer.addView(createText(Intermediates.convertToString(context, R.string.unstandartHairstyleType), Typeface.DEFAULT_BOLD, 16, "Type", "7"));
+                        switch (item.getHtype()) {
+                            case "straight":
+                                moreContainer.addView(createText(Intermediates.convertToString(context, R.string.straightHairstyleType),  16, "Type", "1"));
+                                break;
+                            case "braid":
+                                moreContainer.addView(createText(Intermediates.convertToString(context, R.string.braidHairstyleType),  16, "Type", "2"));
+                                break;
+                            case "tail":
+                                moreContainer.addView(createText(Intermediates.convertToString(context, R.string.tailHairstyleType),  16, "Type", "3"));
+                                break;
+                            case "bunch":
+                                moreContainer.addView(createText(Intermediates.convertToString(context, R.string.bunchHairstyleType),  16, "Type", "4"));
+                                break;
+                            case "netting":
+                                moreContainer.addView(createText(Intermediates.convertToString(context, R.string.nettingHairstyleType),  16, "Type", "5"));
+                                break;
+                            case "curls":
+                                moreContainer.addView(createText(Intermediates.convertToString(context, R.string.curlsHairstyleType),  16, "Type", "6"));
+                                break;
+                            case "unstandart":
+                                moreContainer.addView(createText(Intermediates.convertToString(context, R.string.unstandartHairstyleType),  16, "Type", "7"));
+                                break;
+                        }
 
-                        if (item.getHfor().equals("kids"))
-                            moreContainer.addView(createText(Intermediates.convertToString(context, R.string.forKids), Typeface.DEFAULT_BOLD, 16, "For", "1"));
-                        else if (item.getHfor().equals("everyday"))
-                            moreContainer.addView(createText(Intermediates.convertToString(context, R.string.forEveryday), Typeface.DEFAULT_BOLD, 16, "For", "2"));
-                        else if (item.getHfor().equals("wedding"))
-                            moreContainer.addView(createText(Intermediates.convertToString(context, R.string.forWedding), Typeface.DEFAULT_BOLD, 16, "For", "3"));
-                        else if (item.getHfor().equals("evening"))
-                            moreContainer.addView(createText(Intermediates.convertToString(context, R.string.forEvening), Typeface.DEFAULT_BOLD, 16, "For", "4"));
-                        else if (item.getHfor().equals("exclusive"))
-                            moreContainer.addView(createText(Intermediates.convertToString(context, R.string.forExclusive), Typeface.DEFAULT_BOLD, 16, "For", "5"));
+                        switch (item.getHfor()) {
+                            case "kids":
+                                moreContainer.addView(createText(Intermediates.convertToString(context, R.string.forKids),  16, "For", "1"));
+                                break;
+                            case "everyday":
+                                moreContainer.addView(createText(Intermediates.convertToString(context, R.string.forEveryday),  16, "For", "2"));
+                                break;
+                            case "wedding":
+                                moreContainer.addView(createText(Intermediates.convertToString(context, R.string.forWedding),  16, "For", "3"));
+                                break;
+                            case "evening":
+                                moreContainer.addView(createText(Intermediates.convertToString(context, R.string.forEvening),  16, "For", "4"));
+                                break;
+                            case "exclusive":
+                                moreContainer.addView(createText(Intermediates.convertToString(context, R.string.forExclusive),  16, "For", "5"));
+                                break;
+                        }
 
                         holder.moreContainer.addView(moreContainer);
                     } else if (holder.showMore.getText().equals(HIDE)) {
@@ -249,20 +240,20 @@ public class FavoritesHairstyleFeedListAdapter extends RecyclerView.Adapter<Favo
         }
     }
 
-    private TextView createText(String title, Typeface tf, int padding, final String type, final String index) {
+    private TextView createText(String title, int padding, final String type, final String index) {
         TextView tw = new TextView(context);
-        tw.setText("" + title);
+        tw.setText(String.valueOf(title));
         tw.setPadding(0, padding, 0, padding);
         tw.setTextSize(14);
         tw.setTextColor(Color.argb(255, 50, 50, 50));
         tw.setOnClickListener(new View.OnClickListener() {
             @Override
             public void onClick(View view) {
-                if (type == "Length") {
+                if (Objects.equals(type, "Length")) {
                     String[] length = context.getResources().getStringArray(R.array.hairstyleLength);
                     Intent intent = new Intent(context, SearchHairstyleMatrix.class);
                     intent.addFlags(Intent.FLAG_ACTIVITY_NEW_TASK);
-                    intent.putExtra("Toolbar", "" + length[new Integer(index)]);
+                    intent.putExtra("Toolbar", "" + length[Integer.valueOf(index)]);
                     intent.putExtra("Request", "");
                     intent.putExtra("HairstyleLength", "" + index);
                     intent.putExtra("HairstyleType", "0");
@@ -270,11 +261,11 @@ public class FavoritesHairstyleFeedListAdapter extends RecyclerView.Adapter<Favo
                     context.startActivity(intent);
                     FireAnal.sendString("2", "FavoritesHairstyleFeedParamLength", index);
                 }
-                if (type == "Type") {
+                if (Objects.equals(type, "Type")) {
                     String[] type = context.getResources().getStringArray(R.array.hairstyleType);
                     Intent intent = new Intent(context, SearchHairstyleMatrix.class);
                     intent.addFlags(Intent.FLAG_ACTIVITY_NEW_TASK);
-                    intent.putExtra("Toolbar", "" + type[new Integer(index)]);
+                    intent.putExtra("Toolbar", "" + type[Integer.valueOf(index)]);
                     intent.putExtra("Request", "");
                     intent.putExtra("HairstyleLength", "0");
                     intent.putExtra("HairstyleType", "" + index);
@@ -282,11 +273,11 @@ public class FavoritesHairstyleFeedListAdapter extends RecyclerView.Adapter<Favo
                     context.startActivity(intent);
                     FireAnal.sendString("2", "FavoritesHairstyleFeedParamType", index);
                 }
-                if (type == "For") {
+                if (Objects.equals(type, "For")) {
                     String[] hfor = context.getResources().getStringArray(R.array.hairstyleFor);
                     Intent intent = new Intent(context, SearchHairstyleMatrix.class);
                     intent.addFlags(Intent.FLAG_ACTIVITY_NEW_TASK);
-                    intent.putExtra("Toolbar", "" + hfor[new Integer(index)]);
+                    intent.putExtra("Toolbar", "" + hfor[Integer.valueOf(index)]);
                     intent.putExtra("Request", "");
                     intent.putExtra("HairstyleLength", "0");
                     intent.putExtra("HairstyleType", "0");
@@ -296,121 +287,7 @@ public class FavoritesHairstyleFeedListAdapter extends RecyclerView.Adapter<Favo
                 }
             }
         });
-        //tw.setTypeface(tf);
         return tw;
-    }
-
-    private TextView createText(String title, Typeface tf, int padding) {
-        TextView tw = new TextView(context);
-        tw.setText("" + title);
-        tw.setPadding(0, padding, 0, padding);
-        tw.setTextSize(14);
-        tw.setTextColor(Color.argb(255, 50, 50, 50));
-        //tw.setTypeface(tf);
-        return tw;
-    }
-
-    private LinearLayout difficult(String difficult) {
-        ImageView imageView = new ImageView(context);
-        LinearLayout layout = new LinearLayout(context);
-        layout.setVerticalGravity(Gravity.CENTER_VERTICAL);
-        layout.setOrientation(LinearLayout.HORIZONTAL);
-        TextView text = new TextView(context);
-        text.setTextSize(14);
-        text.setTextColor(Color.argb(255, 100, 100, 100));
-        text.setPadding(16, 0, 0, 0);
-        if (difficult.equals("easy")) {
-            imageView.setImageResource(R.mipmap.easy);
-            text.setText(R.string.difficult_easy);
-        }
-        if (difficult.equals("medium")) {
-            imageView.setImageResource(R.mipmap.medium);
-            text.setText(R.string.difficult_medium);
-        }
-        if (difficult.equals("hard")) {
-            imageView.setImageResource(R.mipmap.hard);
-            text.setText(R.string.difficult_hard);
-        }
-        layout.addView(imageView);
-        layout.addView(text);
-        return layout;
-    }
-
-    private ImageView createCircle(String color, final String searchParameter) {
-        ImageView imageView = new ImageView(context);
-        imageView.setLayoutParams(new ViewGroup.LayoutParams((int) (Storage.getInt("Width", 480) * 0.075F), (int) (Storage.getInt("Width", 480) * 0.075F)));
-        imageView.setScaleX(0.9F);
-        imageView.setScaleY(0.9F);
-        imageView.setBackgroundColor(Color.parseColor(color));
-        imageView.setImageResource(R.mipmap.photo_layer);
-
-        imageView.setOnClickListener(new View.OnClickListener() {
-            @Override
-            public void onClick(View view) {
-                Intent intent = new Intent(context, Search.class);
-                intent.addFlags(Intent.FLAG_ACTIVITY_NEW_TASK);
-                intent.putExtra("hashTag", searchParameter);
-                context.startActivity(intent);
-            }
-        });
-        return imageView;
-    }
-
-
-    String colorName;
-
-    private LinearLayout createImage(String color) {
-        LinearLayout layout = new LinearLayout(context);
-        layout.setOrientation(LinearLayout.HORIZONTAL);
-        layout.setVerticalGravity(Gravity.CENTER_VERTICAL);
-
-        ImageView imageView = new ImageView(context);
-        TextView title = new TextView(context);
-        title.setTextSize(14);
-        title.setTextColor(Color.argb(255, 100, 100, 100));
-        title.setPadding(16, 0, 0, 0);
-        if (color.equals("black")) {
-            colorName = "black";
-            imageView.setImageResource(R.mipmap.eye_black);
-            title.setText(R.string.black_eyes);
-        }
-        if (color.equals("blue")) {
-            colorName = "blue";
-            imageView.setImageResource(R.mipmap.eye_blue);
-            title.setText(R.string.blue_eyes);
-        }
-        if (color.equals("brown")) {
-            colorName = "brown";
-            imageView.setImageResource(R.mipmap.eye_brown);
-            title.setText(R.string.brown_eyes);
-        }
-        if (color.equals("gray")) {
-            colorName = "gray";
-            imageView.setImageResource(R.mipmap.eye_gray);
-            title.setText(R.string.gray_eyes);
-        }
-        if (color.equals("green")) {
-            colorName = "green";
-            imageView.setImageResource(R.mipmap.eye_green);
-            title.setText(R.string.green_eyes);
-        }
-        if (color.equals("hazel")) {
-            colorName = "hazel";
-            imageView.setImageResource(R.mipmap.eye_hazel);
-            title.setText(R.string.hazel_eyes);
-        }
-        imageView.setOnClickListener(new View.OnClickListener() {
-            @Override
-            public void onClick(View view) {
-                Intent intent = new Intent(context, Search.class);
-                intent.addFlags(Intent.FLAG_ACTIVITY_NEW_TASK);
-                intent.putExtra("hashTag", colorName);
-                context.startActivity(intent);
-            }
-        });
-        layout.addView(imageView);
-        layout.addView(title);
-        return layout;
     }
 
     @Override
